Gotta improve styling, prevent p tags from spilling over

--- a/src/components/UserRow/style.css
+++ b/src/components/UserRow/style.css
@@ -5,4 +5,9 @@
     padding: 5px;
     background-color: #f4f4f4;
     border: solid black .5px;
+    float: left; width: 100%;
+}
+
+.row p {
+    float: left; width: 100%;
 }
